--- a/start-01.html
+++ b/start-01.html
@@ -7,14 +7,14 @@
                   <article>
 
                       <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/sand.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/sand.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/sand.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/sand.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -28,14 +28,14 @@
                   <article>
 
                       <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/shoes.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/shoes.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/shoes.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/shoes.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -50,14 +50,14 @@
                   <article>
 
                       <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/poster.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/poster.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/poster.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/poster.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -73,14 +73,14 @@
                   <article>
 
                       <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/portrait.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/portrait.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/portrait.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/portrait.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -95,14 +95,14 @@
                   <article>
 
                       <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/lions.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/lions.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/lions.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/lions.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -116,14 +116,14 @@
               <div class="isotopeSelector col"><!-- col -->
                   <article>
                        <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/ladybug.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/ladybug.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/ladybug.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/ladybug.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -136,14 +136,14 @@
                   <article>
                 
                     <figure>
-                        <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/iguana.jpg" alt="alt ni">
+                        <img class="img img-responsive" src="images/gallery/s/iguana.jpg" alt="alt ni">
                         <div class="overlay-background">
                             <div class="inner"></div>
                         </div>
                         <div class="overlay">
                             <div class="inner-overlay">
                                 <div class="inner-overlay-content with-icons">
-                                    <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/iguana.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                    <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/iguana.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                     <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
@@ -158,14 +158,14 @@
                   <article>
 
                        <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/guinea.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/guinea.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/guinea.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/guinea.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -179,14 +179,14 @@
                   <article>
 
                        <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/feet.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/feet.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/feet.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/feet.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -200,14 +200,14 @@
                   <article>
 
                    <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/dog.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/dog.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/dog.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/dog.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -221,14 +221,14 @@
                   <article>
 
                        <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/spin.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/spin.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/spin.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/spin.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
@@ -242,14 +242,14 @@
                   <article>
 
                    <figure>
-                          <img class="img img-responsive" src="<?php echo get_template_directory_uri() ?>/images/gallery/s/sunset.jpg" alt="alt ni">
+                          <img class="img img-responsive" src="images/gallery/s/sunset.jpg" alt="alt ni">
                           <div class="overlay-background">
                               <div class="inner"></div>
                           </div>
                           <div class="overlay">
                               <div class="inner-overlay">
                                   <div class="inner-overlay-content with-icons">
-                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="<?php echo get_template_directory_uri() ?>/images/gallery/b/sunset.jpg" target="_blank"><i class="fa fa-search"></i></a>
+                                      <a title="Enter Custom Text Here..." class="fancybox-pop" rel="" href="images/gallery/b/sunset.jpg" target="_blank"><i class="fa fa-search"></i></a>
                                       <a href="#" title="Enter Custom Title"><i class="fa fa-link"></i></a>
                                   </div>
                               </div>
